Fixed an issue in the header on tablet

--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -28,7 +28,6 @@
 
 #menu {
 	background: #FFF;
-	padding: 1.5em;
 
 	z-index: 1000;
 	position: absolute;
